# tkvs

./: .env  .gitignore  Cargo.nix  Cargo.toml  Cross.toml  README.md  cloud-localds.nix  flake.nix  result  rust-toolchain.toml
.github/workflows/: ci.yaml  crash-test.yaml
client/: Cargo.toml  build.rs
client/src/: main.rs
core/: .gitignore  Cargo.toml
core/src/: atomic_append.rs  db.rs  lib.rs  lock_set.rs  main.rs  query_value.rs  range_element.rs  tests.rs
crash-test/: .gitignore  Cargo.toml  Makefile  cloud.txt  image-url
crash-test/src/: main.rs
protos/: Cargo.toml  build.rs
protos/proto/kgtkr/: tkvs.proto
protos/src/: lib.rs
server/: Cargo.toml  build.rs
server/proto/kgtkr/: tkvs.proto
server/src/: app_config.rs  main.rs
src/: atomic_append.rs  db.rs  lib.rs  lock.rs  lock2.rs  lock_set.rs  main.rs
vm-test/: .gitignore  Makefile  test.sh  vm_rsa
vm-test/image/: Dockerfile  cloud.txt
