[package]
edition = "2021"
name = "tkvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bincode = "1.3.3"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version = "1.0.140", features = ["derive"]}
thiserror = "1.0.31"
