[package]
edition = "2021"
name = "tkvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
clap = {version = "3.2.16", features = ["derive"]}
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version = "1.0.140", features = ["derive"]}
thiserror = "1.0.31"
tokio = {version = "1.20.1", features = ["full"]}
