[package]
edition = "2021"
name = "tkvs-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
bytes = "1.2.1"
clap = {version = "3.2.16", features = ["derive"]}
dashmap = "5.3.4"
rand = "0.8.5"
serde = "1.0.137"
serde-env = "0.0.3"
tkvs-core = {path = "../core"}
tkvs-protos = {path = "../protos"}
tokio = {version = "1.20.1", features = ["full"]}
tonic = "0.8.0"
tonic-reflection = "0.5.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
